@@ -223,9 +223,13 @@ class Parser {
     * */
 
     try {
-
-      if (match(FUN)) return function("function");
       
+      if (check(FUN) && checkNext(IDENTIFIER) ) {
+        Logger.debug("je suis apres fun");
+        consume(FUN, null);
+        return function("function");
+      }
+
       if (match(VAR)) return varDeclaration();
 
       return statement();
@@ -392,8 +396,11 @@ class Parser {
 
   private Stmt.Function function(String kind) {
     // function → IDENTIFIER "(" parameters? ")" block ;
-    Token name = consume(IDENTIFIER, "Expect " + kind + " name.");
+      Token name = consume(IDENTIFIER, "Expect " + kind + " name.");
+      return new Stmt.Function(name, functionBody(kind));
+  }
 
+  private Expr.Function functionBody(String kind) {
     consume(LEFT_PAREN, "Expect '(' after " + kind + " name.");
     List<Token> parameters = new ArrayList<>();
     if (!check(RIGHT_PAREN)) {
@@ -407,12 +414,12 @@ class Parser {
     }
     consume(RIGHT_PAREN, "Expect ')' after parameters.");
 
+    Logger.debug("je passe ici");
     consume(LEFT_BRACE, "Expect '{' before " + kind + " body.");
     List<Stmt> body = block();
-    return new Stmt.Function(name, parameters, body);
-
+    return new Expr.Function(parameters, body);
   }
-
+  
   private List<Stmt> block() {
     // block     → "{" declaration* "}" ;
     
@@ -494,6 +501,22 @@ class Parser {
     return call();
   }
 
+  private Expr call() {
+    // call  → primary ( "(" arguments? ")" )* ;
+    
+    Expr expr = primary();
+
+    while (true) {
+      if (match(LEFT_PAREN)) {
+        expr = finishCall(expr);
+      } else {
+        break;
+      }
+    }
+
+    return expr;
+  }
+
   private Expr finishCall(Expr callee) {
     List<Expr> arguments = new ArrayList<>();
     if (!check(RIGHT_PAREN)) {
@@ -511,21 +534,6 @@ class Parser {
     return new Expr.Call(callee, paren, arguments);
   }
 
-  private Expr call() {
-    // call  → primary ( "(" arguments? ")" )* ;
-    
-    Expr expr = primary();
-
-    while (true) {
-      if (match(LEFT_PAREN)) {
-        expr = finishCall(expr);
-      } else {
-        break;
-      }
-    }
-
-    return expr;
-  }
 
   private Expr primary() {
     /* primary → "true" | "false" | "nil"
@@ -541,16 +549,20 @@ class Parser {
     if (match(NUMBER, STRING)) {
       return new Expr.Literal(previous().literal);
     }
+    
 
     if (match(IDENTIFIER)) {
       return new Expr.Variable(previous());
     }
+
+    if (match(FUN)) return functionBody("function");
 
     if (match(LEFT_PAREN)) {
       Expr expr = expression();
       consume(RIGHT_PAREN, "Expect ')' after expression.");
       return new Expr.Grouping(expr);
     }
+    
 
     throw error(peek(), "Expect expression.");
 
@@ -576,6 +588,12 @@ class Parser {
   private boolean check(TokenType type) {
     if (isAtEnd()) return false;
     return peek().type == type;
+  }
+
+  private boolean checkNext(TokenType tokenType) {
+    if (isAtEnd()) return false;
+    if (tokens.get(current + 1).type == EOF) return false;
+    return tokens.get(current + 1).type == tokenType;
   }
 
   private Token advance() {
