@@ -1,0 +1,9 @@
+fun thrice(fn) {
+for (var i=1; i <=3; i += 1) {
+  fn(i);
+  }
+}
+
+thrice( fun (a) { 
+   print a; 
+ });
